# Computer_Practise

./: ClassesCP3.cpp  HashTableClass.cpp  List.cpp  README.md  Time.cpp  Time.h  main.cpp  personCP3.h
Adapter Pattern/: documentation  main_.cpp
FACTORY/: kp_factory
LABA2/: IndividualMatrixCases.cpp  IndividualMatrixCases.h  Matrix.cpp  Matrix.h  Source.cpp  Vector.cpp  Vector.h  linear.cpp  linear.h  linear_test.h  main.cpp  matrix.txt  operator.cpp  operator.h  test_runner.h
LABA3/: main.cpp  test.txt
Pacman/: AbstractGhostFactory.cpp  AbstractGhostFactory.h  CMakeLists.txt  Cell.cpp  Cell.h  Entity.cpp  Entity.h  Field.h  Game.cpp  Game.h  Ghost.cpp  Ghost.h  Pacman.cpp  Pacman.h  UIPanel.cpp  UIPanel.h  main.cpp
RANDOM PASSWORDS/: main.cpp
КП 3 - Package task и future/: main-6.cpp
контрольная КП/: main__.cpp  микроDocumentation
